# MotionDynamics_4TO

./: CMakeLists.txt  README.md  test.sh
include/: ReadInput.h  md.h
src/: ReadInput.cpp  main.cpp  md.cpp
